--- a/CodeDMX/react-dmx/src/composant/GridComponentT3.css
+++ b/CodeDMX/react-dmx/src/composant/GridComponentT3.css
@@ -19,3 +19,28 @@
   .grid-cell:hover {
     background-color: #e0e0e0; /* Couleur de fond au survol */
   }
+
+  .scene-list-container {
+    margin: 20px;
+  }
+  
+  .scene-scroll-container {
+    max-height: 300px; /* Height of the scrollable area */
+    overflow-y: auto; /* Enable vertical scrolling */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two columns layout */
+    gap: 10px; /* Space between grid items */
+    width: 500px;
+  }
+  
+  .grid-cell.draggable {
+    cursor: grab;
+  }
+  
+  .grid-cell.draggable:active {
+    cursor: grabbing;
+  }
+  
