--- a/CodeDMX/react-dmx/src/composant/GridComponentT8.css
+++ b/CodeDMX/react-dmx/src/composant/GridComponentT8.css
@@ -44,12 +44,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100px;
+  height: 150px;
   background-color: #e74c3c;
   color: #fff;
   font-size: 20px;
   cursor: pointer;
   border-radius: 10px;
+  width: 15%;
+  margin-left: 25%;
+  margin-top: 3%;
 }
 
 .scene-list-container {
@@ -58,9 +61,11 @@
   margin-bottom: 10px;
   position: fixed;
   top: 0;
-  max-height: calc(100vh - 50px);
+  max-height: calc(100vh - 500px);
   /* Ajuste la hauteur maximale en fonction de la hauteur de la fenêtre */
   overflow-y: auto;
+  overflow-x: hidden;
+  width: 25%;
 }
 
 .scene-scroll-container {
@@ -71,11 +76,13 @@
   max-width: 100%;
   overflow-y: auto;
   /* Ajoute une barre de défilement verticale si nécessaire */
+  overflow-x: hidden;
 }
 
 .scene-list-container .grid-cell {
   flex: 0 0 calc(30% - 10px);
   height: 100px;
+  font-size: 14px; /* Ajout de la taille de la police */
 }
 
 .mode-button {
@@ -84,7 +91,7 @@
   right: 10px;
   background-color: #2c3e50;
   color: #fff;
-  padding: 10px 20px;
+  padding: 20px 40px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
