--- a/CodeDMX/react-dmx/src/App.css
+++ b/CodeDMX/react-dmx/src/App.css
@@ -32,7 +32,27 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+ 
+.deco-button {
+  position: absolute;
+  top: 125px;
+  right: 25px;
+  background-color: #2c3e50;
+  color: #fff;
+  padding: 20px 40px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Ajout d'une ombre */
+  transition: background-color 0.3s ease, transform 0.3s ease; /* Animation */
+}
+
+.deco-button:hover {
+  background-color: #34495e;
+  transform: scale(1.05);
 }
